<resources>
    <string name="app_name">Basketlly</string>


    <string name="string_button_training">+ Training</string>
    <string name="text_welcome">Welcome to Basketlly</string>
    <string name="new_quote">New</string>

    <string name="quote1">\n“I’ve never lost a game, I just ran out of time.” ― Michael Jordan\n</string>
    <string name="quote2">\n“Every memory I had growing up was involving a basketball. I didn’t go to the prom and stuff like that. It was always basketball for me.” ― Kevin Durant\n</string>
    <string name="quote3">\n“Be a dreamer. If you don’t know how to dream, you’re dead.” ― Jim Valvano\n</string>
    <string name="quote4">\n“When you’re not practicing, someone else is getting better.” ― Allen Iverson\n</string>
    <string name="quote5">\n“Hard work beats talent when talent fails to work hard.” ― Kevin Durant\n</string>
    <string name="quote6">\n“All the successful teams I’ve ever seen have three characteristics: they play unselfish, they play together, and they play hard.” ― Larry Brown\n</string>
    <string name="quote7">\n“Keep practicing. Never let anyone tell you’re too small or too slow.” ― Chris Paul\n</string>
    <string name="quote8">\n“The two ingredients in success in basketball are playing hard and playing intelligently.” ― Pete Carroll\n</string>
    <string name="quote9">\n“I always laugh when people ask me about rebounding techniques. I’ve got a technique. It’s called just go get ball.” ― Charles Barkley\n</string>
    <string name="quote10">\n“Me shooting 40% at the foul line is just God’s way to say nobody’s perfect.” ― Shaquille O’Neal\n</string>
    <string name="quote11">\n“Don’t let winning make you soft. Don’t let losing make you quit. Don’t let your teammates down in any situation.” ― Larry Bird\n</string>
    <string name="quote12">\n“I really get motivated when I have doubters.” — Shaquille O’Neal\n</string>
    <string name="quote13">\n“I’ve failed over and over and over again in my life and that is why I succeed.” ― Michael Jordan\n</string>
    <string name="quote14">\n“Never give up. Failure and rejection are just the first steps to succeeding.”― Jim Valvano\n</string>
    <string name="quote15">\n“Talent wins games, but teamwork and intelligence wins championships.” ― Michael Jordan\n</string>
    <string name="quote16">\n“A team will always appreciate a great individual if he’s willing to sacrifice for the group.” ― Kareem Abdul Jabbar\n</string>
    <string name="quote17">\n“The important thing is that your teammates have to know you’re pulling for them and you really want them to be successful.” ― Kobe Bryant\n</string>
    <string name="quote18">\n“A strong leader accepts blame and gives the credit. A weak leader gives blame and accepts the credit.” ― John Wooden\n</string>
    <string name="quote19">\n“The game has its ups and downs, but you can never lose focus of your individual goals and you can’t let yourself be beat because of lack of effort.” ― Michael Jordan\n</string>
    <string name="quote20">\n“Starting today, you will play like winners, act like winners, and most importantly, you will be winners.” ‒ Coach Ken Carter\n</string>
    <string name="quote21">\n“The board sent the message loud and clear. Winning basketball games is more important than graduating from high school and going to college. I’m sorry, I just can’t support that message.” ― Coach Ken Carter\n</string>
    <string name="quote22">\n“Since when is winning not enough? Playing hard not enough?” ― Coach Ken Carter\n</string>
    <string name="quote23">\n“And, I promise you, I will do everything in my power to get you to college and a better life.” ― Coach Ken Carter\n</string>
    <string name="quote24">\n“Some of my teammates went to prison. Some of them ended up dead. I took this job because I wanted to effect change in a special group of young men, and this is the only way that I know how to do that.” ― Coach Ken Carter\n</string>
    <string name="quote25">\n“If you endorse the fact that fifteen, sixteen, seventeen year-old boys cannot honor the simple rules of a basketball contract, how long do you think it’ll be before they’re out there breaking laws?” ― Coach Ken Carter\n</string>
    <string name="quote26">\n“Now, I want you to go home and look at your lives tonight and look at your parents’ lives and ask yourself, ‘Do I want better?’ If the answer is yes, I will see you here tomorrow.” ― Coach Ken Carter\n</string>
    <string name="quote27">\n“We control the tempo of the game. We make them play Richmond Oiler ball.” ― Coach Ken Carter\n</string>
    <string name="quote28">\n“Our deepest fear is not that we are inadequate. Our deepest fear is that we are powerful beyond measure” ― Timo Cruz\n</string>
    <string name="quote29">\n“You said we’re a team. One person struggles, we all struggle. One person triumphs, we all triumph.” ― Jason Lyle\n</string>

    <!-- The %s is where the formatted percentage will be inserted.-->
    <string name="percentage">%s</string>
    <string name="basketball_ball">basketball ball</string>
    <string name="successful_attempts">Successful attempts</string>
    <string name="all_attempts">All Attempts</string>
    <string name="item_attempts">%s/%s</string>
    <string name="item_name_exercise_text">Exercise 1</string>
    <string name="item_percentage_text">%s</string>
    <string name="ball_size_3x3">Ball size 3x3</string>
    <string name="ball_size_7">Ball size 7</string>
    <string name="ball_size_6">Ball size 6</string>
    <string name="string_datum_item">29.9.2022</string>
    <string name="string_name_item">Exercise 1</string>
    <string name="item_all_items">%s</string>
    <string name="string_quote_button_training">+ Training</string>
    <string name="item_percent_val">%s</string>
    <string name="lomitko"> / </string>
    <string name="percento">%</string>
    <string name="item_succ_attm">%s</string>
    <string name="text_ball_item">3x3</string>
    <string name="string_training_date">30.2.2030</string>
    <string name="string_training_excercise">Exercise 1</string>
    <string name="size_of_ball">Size of ball</string>
    <string name="add">Add</string>
    <string name="plus">+</string>
    <string name="_10">10</string>
    <string name="string_name_excercise">Exercise 1</string>
    <string name="string_hint_all_attem">100</string>
    <string name="percentage_success">Percentage success</string>
    <string name="exercise_add">Add</string>

</resources>