<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quotes_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_7"
    >

    <!-- android:background="@drawable/background_7" -->

    <!-- Text shadow -->
    <!-- android:shadowColor="@color/black"
        android:shadowRadius="3"
        android:shadowDx="11"
        android:shadowDy="11" -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linLayButtonyQuote"
        android:layout_width="match_parent"
        android:layout_height="150dp"

        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quote_text">

        <Button
            android:id="@+id/button_quotes"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/orange"
            android:fontFamily="sans-serif-medium"
            android:text="@string/new_quote"
            android:textAllCaps="false"

            android:textColor="@color/white"
            android:textColorLink="@color/baby_blue"
            android:textSize="29dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button_quote_training"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linLayButtonyQuote" />

        <Button
            android:id="@+id/button_quote_training"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/orange"
            android:fontFamily="sans-serif-medium"
            android:text="@string/string_quote_button_training"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textColorLink="@color/baby_blue"
            android:textSize="29dp"
            android:textStyle="bold"

            app:layout_constraintBottom_toBottomOf="@+id/linLayButtonyQuote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_quotes" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/quote_text"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#D9FFFFFF"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/quote24"
        android:textAlignment="center"
        android:textAllCaps="false"

        android:textColor="@color/black"
        android:textSize="29dp"
        app:layout_constraintBottom_toTopOf="@+id/linLayButtonyQuote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>