<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cvicenie_screen"
    >

    <EditText
        android:id="@+id/name_exercise"
        android:background="@color/baby_blue_light"
        android:layout_width="wrap_content"
        android:layout_height="39sp"
        android:layout_marginTop="99sp"
        android:ems="12"
        android:inputType="textPersonName"
        android:text="Exercise 1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/text_successful_attempts"
        />

    <TextView
        android:id="@+id/text_successful_attempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/successful_attempts"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/number_successful_attempts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_exercise"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/number_successful_attempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_successful_attempts"
        app:layout_constraintBottom_toTopOf="@+id/name_all_attempts"
        />

    <TextView
        android:id="@+id/name_all_attempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/all_attempts"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/number_all_attempts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_successful_attempts"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/number_all_attempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="428dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_all_attempts"
        />

    <TextView
        android:id="@+id/percentage_of_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fredoka_one"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="55sp"
        android:text="@string/percentage"
        tools:text="50%"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_all_attempts"
        app:layout_constraintBottom_toTopOf="@+id/button_add_exercise"
        />

    <Button
        android:id="@+id/button_add_exercise"
        android:layout_width="111sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="129dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/orange"
        android:fontFamily="sans-serif-medium"
        android:text="Add"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textColorLink="@color/baby_blue"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percentage_of_exercise"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>